fixed scrollbar

--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -4,21 +4,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Balsamiq+Sans:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@600&display=swap');
 
-* {
-  margin: 0;
-  border: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
 body {
   margin: 0;
   font-family: 'Nunito', sans-serif;
   font-weight: 300;
   color: vars.$font-color;
   background-color: vars.$background-color;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
 }
 
 .quizz-button {
